--- a/Palestra/Palestra/Content/Palestra.css
+++ b/Palestra/Palestra/Content/Palestra.css
@@ -7,7 +7,7 @@
     font-size: 15px;
 }
 .Menu {
-    background-color: #452f51;
+    background-color: #030444;
    border-radius: 5px;
 }
 .PalestraItems li {
@@ -27,33 +27,21 @@
 .col-md-3 {
     padding-top: 10px;
 }
-.formulario {
+.formulario  {
    width:250px;padding:5px;border-radius:5px;background-color:#4ebf6b;float: left;
+}
+.formularioPalestrantes {
+   width:150px;padding:5px;border-radius:5px;background-color:#6b80b2;float: left;
+}
+.formularioPalestrantes img {
+    float: left;
+    padding: 5px;
 }
 .formulario img {
     float: left;
     padding: 10px;
 }
-.divCadastrar {
-     box-shadow: inset 0px 0px 20px 0px #6c75ef;
-}
-.divPPalestras {
-    box-shadow: inset 0px 0px 20px 0px #6c75ef;
-}
-.divPPalestras a {
-    text-decoration: none;
-    color:  #0617f6;
-}
-.divPPalestras a:hover{
-    color: #207536;
-}
-.divPPalestrantes {
-    box-shadow: inset 0px 0px 20px 0px #32a950;
-}
-.divPPalestrantes a {
-    color:  #0617f6;
-    text-decoration: none;
-}
-.divPPalestrantes a:hover{
-    color: #31f80a;
+.formularioCadastro{
+    padding:40px;
+    width:300px;
 }
