--- a/Palestra/Palestra/Views/Home/Index.cshtml
+++ b/Palestra/Palestra/Views/Home/Index.cshtml
@@ -20,25 +20,22 @@
 
 <div style="clear: both"></div>
 <p style="text-align: right"><a href="#">Ver mais palestras</a></p>
-<p style="font-family:cursive;font-size: 30px;padding-left: 20px;">Palestrantes</p>
-<div style="padding:50px; ">
+<div style="clear: both"></div>
+<div>
     @{
-        for (int i = 0; i < 4; i++)
+        for (int i = 0; i < 5; i++)
         {
 
             <div class="col-md-3">
-                <div style="width: 295px;padding:10px;border-radius: 10px;background-color:#4ebf6b;float: left" class="divPPalestrantes">
-                    <img alt="" src="../../Content/hell.jpg" width="100" height="100" class="img-rounded" />
-                    <div style="float: right;color: #000080">
-                        <a href="">Marcos Vinicius</a><br />
-                        <a href="" class="glyphicon glyphicon-user"></a>
-                        <a href="" class="glyphicon glyphicon-plus"></a>
-                        <a href="" class="glyphicon glyphicon-envelope"></a>
-                    </div>
+                <div class="formularioPalestrantes">
+                    <p style="text-align: center" class="text-success">AspNet-na Tora</p>
+                    <img alt="" src="../../Content/hell.jpg" width="100" height="100"  class="img-rounded"/>
+                    <p>
+                        Descricao-palestra
+                    </p>
                 </div>
-
             </div>
         }
     }
+
 </div>
-<div style="clear: both"></div>
