--- a/Palestra/Palestra/Views/Palestrante/Cadastrar.cshtml
+++ b/Palestra/Palestra/Views/Palestrante/Cadastrar.cshtml
@@ -1,48 +1,25 @@
 ﻿@model Palestra.Models.Palestrante
-
-<div style="padding-left: 500px;">
-    <div style="width: 400px;padding:100px;border-radius: 20px;background-color:#9ba1eb" class="divCadastrar">
-        <p style="font-family:cursive;font-size: 16px">Registro de sala</p>
-        <form action="" method="post">
-            @Html.ValidationSummary(true)
-            <input type="hidden" value="ID" />
+<div class="panel panel-default">
+    <div class="panel-heading">Cadastrar Palestrante</div>
+    @Html.ValidationSummary(true)
+    <form action="" method="post">
+        <div class="formularioCadastro">
             <div class="form-group">
-                <label for="Nome">Nome</label>
-                <input class="form-control" id="Nome" placeholder="Digite um nome">
+                <label for="@Model.Nome">Nome</label>
+                <input type="text" id="Nome" class="form-control" name="Nome" />
                 @Html.ValidationMessageFor(x => x.Nome)
-            </div>
-            <div class="form-group">
+                <br />
+                <label for="Twitter">Twitter</label>
+                <input type="text" id="Twitter" class="form-control" name="Twitter" />
+                @Html.ValidationMessageFor(x => x.Twitter)
+                <br />
                 <label for="Bio">Biografia</label>
-                <textarea class="form-control" id="Bio" placeholder="Biografia"></textarea>
+                <input type="text" id="Bio" class="form-control" name="Bio" />
                 @Html.ValidationMessageFor(x => x.Bio)
             </div>
-            <div class="form-group">
-                <label for="Twitter">Twitter</label>
-                <input class="form-control" id="Twitter" placeholder="Twitter">
-                @Html.ValidationMessageFor(x => x.Twitter)
-            </div>
-            <button type="submit" class="btn btn-default" id="Register">Registrar</button>
-        </form>
-    </div>
+            <br />
+            
+            <button type="submit" class="btn btn-success">Cadastrar</button>
+        </div>
+    </form>
 </div>
-
-<script src="~/Scripts/jquery-1.10.2.js"></script>
-<script>
-    $("#Nome").change(function() {
-        var nome = document.getElementById("Nome").value;
-        validate(nome);
-    });
-
-    function validate(nome) {
-
-        $.ajax({
-            url: '@Url.Action("Validador","Sala")',
-            type: 'post',
-            data: { _nome: nome },
-            success: function(data) {
-                window.alert(data);
-            }
-        });
-
-    }
-</script>
