--- a/Palestra/Palestra/Views/Palestrante/Editar.cshtml
+++ b/Palestra/Palestra/Views/Palestrante/Editar.cshtml
@@ -1,25 +1,25 @@
-﻿@model Palestra.Models.Sala
-
-<div style="padding-left: 500px;">
-    <div style="width: 400px;padding:100px;border-radius: 20px;background-color:#9ba1eb">
-        <p style="font-family:cursive;font-size: 16px">Alterar Registro</p>
-        <form role="form" action="/" method="post">
-            <input type="hidden" value="ID" />
+﻿@model Palestra.Models.Palestrante
+<div class="panel panel-default">
+    <div class="panel-heading">Alterar Registro-Palestrante</div>
+    @Html.ValidationSummary(true)
+    <form action="" method="post">
+        <div class="formularioCadastro">
             <div class="form-group">
-                <label for="Nome">Nome</label>
-                <input class="form-control" id="Nome" placeholder="Nome da Sala">
-                <span id="validate"></span>
-            </div>
-            <div class="form-group">
-                <label for="Bio">Bio</label>
-                <input class="form-control" id="Bio" value="Bio" >
-            </div>
-            <div class="form-group">
+                <label for="@Model.Nome">Nome</label>
+                <input type="text" id="Nome" class="form-control" name="Nome" value="@Model.Nome"/>
+                @Html.ValidationMessageFor(x => x.Nome)
+                <br />
                 <label for="Twitter">Twitter</label>
-                <input class="form-control" id="Twitter" value="Twitter">
+                <input type="text" id="Twitter" class="form-control" name="Twitter" value="@Model.Twitter"/>
+                @Html.ValidationMessageFor(x => x.Twitter)
+                <br />
+                <label for="Bio">Biografia</label>
+                <input type="text" id="Bio" class="form-control" name="Bio" value="@Model.Bio"/>
+                @Html.ValidationMessageFor(x => x.Bio)
             </div>
-            <button type="submit" class="btn btn-default" id="Register">Modificar</button>
-        </form>
-    </div>
-</div>
+            <br />
 
+            <button type="submit" class="btn btn-success">Alterar</button>
+        </div>
+    </form>
+</div>
