--- a/Palestra/Palestra/Views/Sala/Cadastrar.cshtml
+++ b/Palestra/Palestra/Views/Sala/Cadastrar.cshtml
@@ -1,43 +1,20 @@
 ﻿@model Palestra.Models.Sala
-
-<div style="padding-left: 500px;">
-    <div style="width: 400px;padding:100px;border-radius: 20px;background-color:#9ba1eb" class="divCadastrar">
-        <p style="font-family:cursive;font-size: 16px">Registro de sala</p>
+    <div class="panel panel-default">
+        <div class="panel-heading">Cadastrar Sala</div>
+@Html.ValidationSummary(true)
         <form action="" method="post">
-            @Html.ValidationSummary(true)
-            <input type="hidden" value="ID" />
-            <div class="form-group">
-                <label for="Nome">Nome</label>
-                <input class="form-control" id="Nome" placeholder="Nome da Sala">
-                @Html.ValidationMessageFor(x => x.Nome)
+            <div class="formularioCadastro">
+                <div class="form-group">
+                    <label for="@Model.Nome">Nome</label>
+                    <input type="text" id="Nome" class="form-control" name="Nome"/>
+                    @Html.ValidationMessageFor(x => x.Nome)
+                    <br />
+                    <label for="Numero">Numero</label>
+
+                    <input type="text" id="Numero" class="form-control" name="Numero" />
+                    @Html.ValidationMessageFor(x => x.Numero)
+                </div>
+                <button type="submit" class="btn btn-success">Cadastrar</button>
             </div>
-            <div class="form-group">
-                <label for="Numero">Numero</label>
-                <input class="form-control" id="Numero" placeholder="Numero da Sala">
-                @Html.ValidationMessageFor(x => x.Numero)
-            </div>
-            <button type="submit" class="btn btn-default" id="Register">Registrar</button>
         </form>
     </div>
-</div>
-
-<script src="~/Scripts/jquery-1.10.2.js"></script>
-<script>
-    $("#Nome").change(function() {
-        var nome = document.getElementById("Nome").value;
-        validate(nome);
-    });
-
-    function validate(nome) {
-
-        $.ajax({
-            url: '@Url.Action("Validador","Sala")',
-            type: 'post',
-            data: { _nome: nome },
-            success: function(data) {
-                window.alert(data);
-            }
-        });
-
-    }
-</script>
