--- a/Palestra/Palestra/Views/Sala/Delete.cshtml
+++ b/Palestra/Palestra/Views/Sala/Delete.cshtml
@@ -1,21 +1,13 @@
 ﻿@model Palestra.Models.Sala
-
-<div style="padding-left: 500px;">
-    <div style="width: 400px;padding:100px;border-radius: 20px;background-color:#9ba1eb">
-        
-        <p style="font-family:cursive;font-size: 16px ;color: #f32424">Remover Sala</p>
-        <form role="form" action="/" method="post">
-            <input type="hidden" value="ID" />
+<div class="panel panel-default">
+    <div class="panel-heading">Deseja realmente remover esta sala ?</div>
+    <form action="" method="post">
+        <div class="formularioCadastro">
             <div class="form-group">
-                <label for="Nome">Nome</label>
-                <input class="form-control" id="Nome" placeholder="Nome da Sala">
-                <span id="validate"></span>
+                <label for="@Model.Nome">Nome</label>
+                <input type="text" id="Nome" class="form-control" name="Nome" value="@Model.Nome" />
             </div>
-            <div class="form-group">
-                <label for="Numero">Numero</label>
-                <input class="form-control" id="Numero" placeholder="Numero da Sala">
-            </div>
-            <button type="button" class="btn btn-danger">Deletar</button>
-        </form>
-    </div>
+            <button type="submit" class="btn btn-danger">Deletar</button>
+        </div>
+    </form>
 </div>
