--- a/Palestra/Palestra/Views/Sala/Editar.cshtml
+++ b/Palestra/Palestra/Views/Sala/Editar.cshtml
@@ -1,21 +1,20 @@
 ﻿@model Palestra.Models.Sala
-
-<div style="padding-left: 500px;">
-    <div style="width: 400px;padding:100px;border-radius: 20px;background-color:#9ba1eb">
-        <p style="font-family:cursive;font-size: 16px">Alterar Registro</p>
-        <form role="form" action="/" method="post">
-            <input type="hidden" value="ID" />
+<div class="panel panel-default">
+    <div class="panel-heading">Editar Sala</div>
+    @Html.ValidationSummary(true)
+    <form action="" method="post">
+        <div class="formularioCadastro">
             <div class="form-group">
-                <label for="Nome">Nome</label>
-                <input class="form-control" id="Nome" value="@Model.Nome">
-                <span id="validate"></span>
-            </div>
-            <div class="form-group">
+                <label for="@Model.Nome">Nome</label>
+                <input type="text" id="Nome" class="form-control" name="Nome" value="@Model.Nome"/>
+                @Html.ValidationMessageFor(x => x.Nome)
+                <br />
                 <label for="Numero">Numero</label>
-                <input class="form-control" id="Numero" value="@Model.Numero">
-            </div>
-            <button type="submit" class="btn btn-default" id="Register">Modificar</button>
-        </form>
-    </div>
-</div>
 
+                <input type="text" id="Numero" class="form-control" name="Numero" value="@Model.Numero"/>
+                @Html.ValidationMessageFor(x => x.Numero)
+            </div>
+            <button type="submit" class="btn btn-success">Modificar</button>
+        </div>
+    </form>
+</div>
