--- a/Palestra/Palestra/Views/Shared/_Layout.cshtml
+++ b/Palestra/Palestra/Views/Shared/_Layout.cshtml
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
     <script src="~/Scripts/jquery-1.10.2.js"></script>
+    <script src="~/Scripts/jquery-1.10.2.intellisense.js"></script>
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/Palestra.css" rel="stylesheet" />
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
+    <meta name="description" content="The description of my page" />
 </head>
 <body style="background-color:#f5f1f7">
     <h1>Gerenciador de Palestras</h1>
