--- a/Palestra/Palestra/Views/Trilha/Cadastrar.cshtml
+++ b/Palestra/Palestra/Views/Trilha/Cadastrar.cshtml
@@ -1,16 +1,15 @@
 ﻿@model Palestra.Models.Trilha
-<div style="padding-left: 500px;">
-    <div style="width: 400px;padding:100px;border-radius: 20px;background-color:#9ba1eb" class="divCadastrar">
-        <p style="font-family:cursive;font-size: 16px">Registro de Trilha</p>
-        <form action="" method="post">
-            @Html.ValidationSummary(true)
-            <input type="hidden" value="ID" />
+<div class="panel panel-default">
+    <div class="panel-heading">Cadastrar Trilha de Palestras</div>
+    @Html.ValidationSummary(true)
+    <form action="" method="post">
+        <div class="formularioCadastro">
             <div class="form-group">
-                <label for="Nome">Nome</label>
-                <input class="form-control" id="Nome" placeholder="Nome da Sala">
+                <label for="@Model.Nome">Nome</label>
+                <input type="text" id="Nome" class="form-control" name="Nome" />
                 @Html.ValidationMessageFor(x => x.Nome)
             </div>
-            <button type="submit" class="btn btn-default" id="Register">Registrar</button>
-        </form>
-    </div>
+            <button type="submit" class="btn btn-success">Cadastrar</button>
+        </div>
+    </form>
 </div>
