--- a/Palestra/Palestra/Views/Trilha/Editar.cshtml
+++ b/Palestra/Palestra/Views/Trilha/Editar.cshtml
@@ -1,16 +1,15 @@
-﻿
-@model Palestra.Models.Trilha
-
-<div style="padding-left: 500px;">
-    <div style="width: 400px;padding:100px;border-radius: 20px;background-color:#9ba1eb">
-        <p style="font-family:cursive;font-size: 16px">Alterar Registro</p>
-        <form role="form" action="/" method="post">
-            <input type="hidden" value="ID" />
+﻿@model Palestra.Models.Trilha
+<div class="panel panel-default">
+    <div class="panel-heading">Editar Trilha</div>
+    @Html.ValidationSummary(true)
+    <form action="" method="post">
+        <div class="formularioCadastro">
             <div class="form-group">
-                <label for="Nome">Nome</label>
-                <input class="form-control" id="Nome" value="@Model.Nome">
+                <label for="@Model.Nome">Nome</label>
+                <input type="text" id="Nome" class="form-control" name="Nome" value="@Model.Nome" />
+                @Html.ValidationMessageFor(x => x.Nome)
             </div>
-            <button type="submit" class="btn btn-default" id="Register">Modificar</button>
-        </form>
-    </div>
+            <button type="submit" class="btn btn-success">Modificar</button>
+        </div>
+    </form>
 </div>
