--- a/Palestra/Palestra/Views/Palest/Cadastrar.cshtml
+++ b/Palestra/Palestra/Views/Palest/Cadastrar.cshtml
@@ -1,75 +1,47 @@
-﻿@using Palestra.Models
-@model Palestra.Models.Palestras
-
-<div style="padding-left: 500px;">
-    <div style="width: 400px;padding:100px;border-radius: 20px;background-color:#9ba1eb" class="divCadastrar">
-        <p style="font-family:cursive;font-size: 16px">Registro de Palestras</p>
-        <form action="" method="post">
-            @Html.ValidationSummary(true)
-            <input type="hidden" value="ID" />
+﻿@model Palestra.Models.Palestras
+<div class="panel panel-default">
+    <div class="panel-heading">Cadastrar Palestrante</div>
+   @Html.ValidationSummary(true)
+    <form action="" method="post">
+        <div class="formularioCadastro">
             <div class="form-group">
-                <label for="Titulo">Titulo</label>
-                <input class="form-control" id="Titulo" placeholder="Digite um Titulo">
-                @Html.ValidationMessageFor(x => x.Titulo)
-            </div>
-            <div class="form-group">
-                <label for="Nome">Nome</label>
-                <input class="form-control" id="Nome" placeholder="Digite um Nome">
+                <label for="@Model.Nome">Nome</label>
+                <input type="text" id="Nome" class="form-control" name="Nome" />
                 @Html.ValidationMessageFor(x => x.Nome)
-            </div>
-            <div class="form-group">
+                <br />
+                <label for="Titulo">Titulo</label>
+                <input type="text" id="Titulo" class="form-control" name="Titulo" />
+                @Html.ValidationMessageFor(x => x.Titulo)
+                <br />
                 <label for="Codigo">Codigo</label>
-                <input class="form-control" id="Codigo" placeholder="Digite um Codigo">
+                <input type="text" id="Codigo" class="form-control" name="Codigo" />
                 @Html.ValidationMessageFor(x => x.Codigo)
-            </div>
-            <div class="form-group">
+                <br />
                 <label for="Descricao">Descricao</label>
-                <textarea id="Descricao" class="form-control" placeholder="Digite a descricao"></textarea>
-                @Html.ValidationMessageFor(x=>x.Descricao)
-            </div>
-            <div class="form-group">
+                <input type="text" id="Descricao" class="form-control" name="Descricao" />
+                @Html.ValidationMessageFor(x => x.Descricao)
+                <br />
                 <label for="Nivel">Nivel</label>
-                <input class="form-control" id="Nivel" placeholder="Digite um Nivel">
+                <input type="text" id="Nivel" class="form-control" name="Nivel" />
                 @Html.ValidationMessageFor(x => x.Nivel)
-            </div>
-            <div class="form-group">
+                <br />
                 <label for="Horario">Horario</label>
-                <input class="form-control" id="Horario" placeholder="Digite a data da palestra">
+                <input type="date" id="Horario" class="form-control" name="Horario"/>
+                @Html.ValidationMessageFor(x => x.Horario)
+                <br />
+                @Html.DropDownList("PalestranteID", (SelectList)ViewBag.palestrantes, new { @class = "form-control" })
+                @Html.ValidationMessageFor(x => x.PalestranteID)
+                <br />
+                @Html.DropDownList("SalaID", (SelectList)ViewBag.salas, new { @class = "form-control" })
+                @Html.ValidationMessageFor(x => x.SalaID)
+                <br />
+                @Html.DropDownList("TrilhaID", (SelectList)ViewBag.trilhas, new { @class = "form-control" })
+                @Html.ValidationMessageFor(x => x.TrilhaID)
+
             </div>
-            <div class="form-group">
-                <label for="Trilha">Trilha</label>
-                @Html.DropDownList("Trilha.ID",(SelectList)ViewBag.Trilhas, new {@class ="form-control"})
-            </div>
-            <div class="form-group">
-                <label>Sala</label>
-                @Html.DropDownList("Sala.ID", (SelectList)ViewBag.Salas, new { @class = "form-control" })
-            </div>
-            <div class="form-group">
-                <label>Palestrantes</label>
-                @Html.DropDownList("Palestrante.ID", (SelectList)ViewBag.Palestrantes, new { @class = "form-control" })
-            </div>
-            <button type="submit" class="btn btn-default" id="Register">Registrar</button>
-        </form>
-    </div>
+            <br />
+
+            <button type="submit" class="btn btn-success">Cadastrar</button>
+        </div>
+    </form>
 </div>
-
-<script src="~/Scripts/jquery-1.10.2.js"></script>
-<script>
-    $("#Nome").change(function() {
-        var nome = document.getElementById("Nome").value;
-        validate(nome);
-    });
-
-    function validate(nome) {
-
-        $.ajax({
-            url: '@Url.Action("Validador","Sala")',
-            type: 'post',
-            data: { _nome: nome },
-            success: function(data) {
-                window.alert(data);
-            }
-        });
-
-    }
-</script></div>
