--- a/Palestra/Palestra/Views/Shared/_Layout.cshtml
+++ b/Palestra/Palestra/Views/Shared/_Layout.cshtml
@@ -27,7 +27,14 @@
         
         
     </nav>
+
+   
+
     <div class="container">
+
+        <div class="col-md-12">
+            @Logger.FlashMessage(TempData)
+        </div>
 
         @RenderBody()
     </div>
