--- a/Palestra/Palestra/Views/Trilha/Index.cshtml
+++ b/Palestra/Palestra/Views/Trilha/Index.cshtml
@@ -16,8 +16,11 @@
             <tr>
                 <td>@item.Nome</td>
                 <td><a href="@Url.Action("Editar", "Trilha", new { id = @item.ID })" style="text-decoration: none;" class="glyphicon glyphicon-pencil"></a></td>
-                <td><a href="@Url.Action("Delete", "Trilha", new { id = @item.ID })" style="text-decoration: none;" class="glyphicon glyphicon-remove"></a></td>
-            </tr>
+                <td>
+                    <a href="@Url.Action("Delete", "Trilha", new { id = @item.ID })" class="glyphicon glyphicon-trash"></a>
+                </td>
+                    
+</tr>
 
         }
 
