adicionando nivel de segurança

--- a/Palestra/Palestra/Views/Home/Index.cshtml
+++ b/Palestra/Palestra/Views/Home/Index.cshtml
@@ -1,41 +1,1 @@
-﻿<p>Principais Palestras</p>
-<div>
-    @{
-        for (int i = 0; i < 5; i++)
-        {
-
-            <div class="col-md-3">
-                <div class="formulario">    
-                    <p style="text-align: center" class="text-success">AspNet-na Tora</p>
-                    <img alt="" src="../../Content/hell.jpg" width="100" height="100" class="img-circle" />
-                    <p>
-                       Descricao-palestra
-                    </p>
-                </div>
-            </div>
-        }
-    }
-    
-</div>
-
-<div style="clear: both"></div>
-<p style="text-align: right"><a href="#">Ver mais palestras</a></p>
-<div style="clear: both"></div>
-<div>
-    @{
-        for (int i = 0; i < 5; i++)
-        {
-
-            <div class="col-md-3">
-                <div class="formularioPalestrantes">
-                    <p style="text-align: center" class="text-success">AspNet-na Tora</p>
-                    <img alt="" src="../../Content/hell.jpg" width="100" height="100"  class="img-rounded"/>
-                    <p>
-                        Descricao-palestra
-                    </p>
-                </div>
-            </div>
-        }
-    }
-
-</div>
+﻿<h2>Pagina Inicial</h2>
