--- a/Palestra/Palestra/Views/Shared/_Layout.cshtml
+++ b/Palestra/Palestra/Views/Shared/_Layout.cshtml
@@ -8,30 +8,55 @@
     <script src="~/Scripts/jquery-1.10.2.intellisense.js"></script>
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <script src="~/Scripts/bootstrap.min.js"></script>
     <link href="~/Content/Palestra.css" rel="stylesheet" />
-    <script src="~/Scripts/modernizr-2.6.2.js"></script>
     <meta name="description" content="The description of my page" />
 </head>
 <body style="background-color:#f5f1f7">
     <h1>Gerenciador de Palestras</h1>
-    <nav class="PalestraMenu">
-        <div class="Menu">
-            <ul class="PalestraItems">
-                <li><a href="@Url.Action("Index","Home")">Pagina Inicial</a></li>
-                <li><a href="@Url.Action("Index","Palest")">Palestras</a></li>
-                <li><a href="@Url.Action("Index","Palestrante")">Palestrantes</a></li>
-                <li><a href="@Url.Action("Index","Sala")">Salas</a></li>
-                <li><a href="@Url.Action("Index","Trilha")">Trilhas</a></li>
-            </ul>
-        </div>
-        
-        
-    </nav>
-
-   
-
     <div class="container">
+        <nav class="navbar navbar-inverse" role="navigation">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="@Url.Action("Index","Home")">Pagina Inicial</a>
+                </div>
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <ul class="nav navbar-nav">
+                            <li><a href="@Url.Action("Index","Palest")">Palestras</a></li>
+                            <li><a href="@Url.Action("Index","Palestrante")">Palestrantes</a></li>
+                            <li><a href="@Url.Action("Index","Sala")">Salas</a></li>
+                            <li><a href="@Url.Action("Index","Trilha")">Trilha</a></li>
+                            <li><a href="@Url.Action("Index","Usuario")">Usuarios</a></li>
+                        </ul>
+                        <form class="navbar-form navbar-left" role="search">
+                            <div class="form-group">
+                                <input type="text" class="form-control" placeholder="Digite sua Busca">
+                            </div>
+                            <button type="submit" class="btn btn-default">Pesquisar</button>
+                        </form><ul class="nav navbar-nav navbar-right">
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">@User.Identity.Name <span class="caret"></span></a>
+                                <ul class="dropdown-menu" role="menu">
+                                    <li><a href="#">Action</a></li>
+                                    <li><a href="@Url.Action("SingOut","Acesso")">Sair</a></li>
+                                </ul>
+                            </li>
+                        </ul>
 
+                    }
+                    @if (!User.Identity.IsAuthenticated)
+                    {
+                        <ul class="nav navbar-nav navbar-rigth">
+                            <li><a href="@Url.Action("Login","Acesso")">Logar</a></li>
+                        </ul>
+                    }
+                    
+
+                </div>
+            </div>
+        </nav>
         <div class="col-md-12">
             @Logger.FlashMessage(TempData)
         </div>
