adicionando view para trocar senha usando ajax

--- a/Palestra/Palestra/Views/Acesso/Login.cshtml
+++ b/Palestra/Palestra/Views/Acesso/Login.cshtml
@@ -1,5 +1,8 @@
 ﻿<form action="" method="post" class="form-group">
-    <input type="text" value="" name="Login" id="Login"/>
-    <input type="text" value="" name="Senha" id="Login" />
-    <button type="submit">Logar</button>
+    <label>Email</label>
+    <input type="text" value="" name="Login" id="Login" class="form-control"/>
+    <label>Senha</label>
+    <input type="password" value="" name="Senha" id="Senha" class="form-control"/>
+    <br />
+    <button type="submit" class="btn btn-success">Logar</button>
 </form>
