--- a/Palestra/Palestra/Views/Palest/Index.cshtml
+++ b/Palestra/Palestra/Views/Palest/Index.cshtml
@@ -26,8 +26,12 @@
             <td>@item.Nivel</td>
             <td>@item.Descricao</td>
             <td>@item.Horario.ToString("dd/MM/yyyy")</td>
-            <td><a href="@Url.Action("Editar", "Palest", new { id = @item.ID })" style="text-decoration: none;" class="glyphicon glyphicon-pencil"></a></td>
-            <td><a href="@Url.Action("Delete", "Palest", new { id = @item.ID })" style="text-decoration: none;" class="glyphicon glyphicon-remove"></a></td>
+            @if (User.IsInRole("Admin"))
+            {
+                <td><a href="@Url.Action("Editar", "Palest", new { id = @item.ID })" style="text-decoration: none;" class="glyphicon glyphicon-pencil"></a></td>
+                <td><a href="@Url.Action("Delete", "Palest", new { id = @item.ID })" style="text-decoration: none;" class="glyphicon glyphicon-remove"></a></td>
+            }
+            
         </tr>
 
     }
