--- a/Palestra/Palestra/Views/Usuario/Editar.cshtml
+++ b/Palestra/Palestra/Views/Usuario/Editar.cshtml
@@ -16,10 +16,27 @@
                 @Html.ValidationMessageFor(x => x.Email)
             </div>
 
-            <div class="form-group">
-                <label for="@Model.Permissao">Permissao</label>
-                <input type="text" id="Permissao" class="form-control" name="Permissao" value="@Model.Permissao" />
-                @Html.ValidationMessageFor(x => x.Permissao)
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox" value="trilha_ver" name="Permissoes[]"/>Trilha
+                </label>
+            </div>
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox" value="palestra_ver" name="Permissoes[]" />Palestra
+                </label>
+            </div>
+
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox" value="palestrante_ver" name="Permissoes[]" />Palestrante
+                </label>
+            </div>
+
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox" value="usuario_ver" name="Permissoes[]" />Usuario
+                </label>
             </div>
 
 
