--- a/Palestra/Palestra/Views/Shared/_Layout.cshtml
+++ b/Palestra/Palestra/Views/Shared/_Layout.cshtml
@@ -24,11 +24,27 @@
                     @if (User.Identity.IsAuthenticated)
                     {
                         <ul class="nav navbar-nav">
-                            <li><a href="@Url.Action("Index","Palest")">Palestras</a></li>
-                            <li><a href="@Url.Action("Index","Palestrante")">Palestrantes</a></li>
-                            <li><a href="@Url.Action("Index","Sala")">Salas</a></li>
-                            <li><a href="@Url.Action("Index","Trilha")">Trilha</a></li>
-                            <li><a href="@Url.Action("Index","Usuario")">Usuarios</a></li>
+                            @if (User.IsInRole("palestra_vizualizar"))
+                            {
+                                <li><a href="@Url.Action("Index","Palest")">Palestras</a></li>
+                            }
+                            @if (User.IsInRole("palestrante_vizualizar"))
+                            {
+                                <li><a href="@Url.Action("Index","Palestrante")">Palestrantes</a></li> }
+
+                            @if (User.IsInRole("sala_vizualizar"))
+                            {
+                                <li><a href="@Url.Action("Index","Sala")">Salas</a></li>
+                            }
+                            @if (User.IsInRole("trilha_vizualizar"))
+                            {
+                                <li><a href="@Url.Action("Index","Trilha")">Trilha</a></li>
+                            }
+                            @if (User.IsInRole("usuario_vizualizar"))
+                            {
+                                <li><a href="@Url.Action("Index","Usuario")">Usuarios</a></li>
+                            }
+
                         </ul>
                         <form class="navbar-form navbar-left" role="search">
                             <div class="form-group">
@@ -39,7 +55,7 @@
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">@User.Identity.Name <span class="caret"></span></a>
                                 <ul class="dropdown-menu" role="menu">
-                                    <li><a href="#">Action</a></li>
+                                    <li><a href="@Url.Action("Index", "Acesso")">Minha Conta</a></li>
                                     <li><a href="@Url.Action("SingOut","Acesso")">Sair</a></li>
                                 </ul>
                             </li>
@@ -52,7 +68,7 @@
                             <li><a href="@Url.Action("Login","Acesso")">Logar</a></li>
                         </ul>
                     }
-                    
+
 
                 </div>
             </div>
@@ -64,5 +80,6 @@
         @RenderBody()
     </div>
     <footer style="text-align: center;padding-top: 30px">Gerenciador de Palestras</footer>
+   
 </body>
 </html>
