--- a/Palestra/Palestra/Views/Palestrante/Editar.cshtml
+++ b/Palestra/Palestra/Views/Palestrante/Editar.cshtml
@@ -2,7 +2,7 @@
 <div class="panel panel-default">
     <div class="panel-heading">Alterar Registro-Palestrante</div>
     @Html.ValidationSummary(true)
-    <form action="" method="post">
+    <form action="" method="post" enctype="multipart/form-data">
         <div class="formularioCadastro">
             <div class="form-group">
                 <label for="@Model.Nome">Nome</label>
@@ -16,6 +16,10 @@
                 <label for="Bio">Biografia</label>
                 <input type="text" id="Bio" class="form-control" name="Bio" value="@Model.Bio"/>
                 @Html.ValidationMessageFor(x => x.Bio)
+                <br />
+                <label for="Bio">Foto</label>
+                <input type="file" id="arquivo" class="form-control" name="arquivo" value="@Model.Foto" />
+                @Html.ValidationMessageFor(x => x.Foto)
             </div>
             <br />
 
