--- a/Palestra/Palestra/Views/Palestrante/Index.cshtml
+++ b/Palestra/Palestra/Views/Palestrante/Index.cshtml
@@ -7,19 +7,24 @@
     <div class="panel-heading">Palestrantes</div>
     <table class="table table-bordered">
         <tr>
-            <th>Nome</th>
+            <th colspan="2">Nome</th>
             <th>Twitter</th>
-            <th colspan="4">Biografia</th>
+            <th colspan="3">Biografia</th>
         </tr>
 
         @foreach (var item in Model)
         {
             <tr>
+
+                <td><img src="~/Content/Uploads/@item.Foto" width="30" height="30" /></td>
                 <td>@item.Nome</td>
                 <td>@item.Twitter</td>
                 <td>@item.Bio</td>
-                <td><a href="@Url.Action("Editar", "Palestrante", new { id = @item.ID })" style="text-decoration: none;" class="glyphicon glyphicon-pencil"></a></td>
-                <td><a href="@Url.Action("Delete", "Palestrante", new { id = @item.ID })" style="text-decoration: none;" class="glyphicon glyphicon-remove"></a></td>
+                @if (User.IsInRole("Admin"))
+                {
+                    <td><a href="@Url.Action("Editar", "Palestrante", new { id = @item.ID })" style="text-decoration: none;" class="glyphicon glyphicon-pencil"></a></td>
+                    <td><a href="@Url.Action("Delete", "Palestrante", new { id = @item.ID })" style="text-decoration: none;" class="glyphicon glyphicon-remove"></a></td>
+                }
             </tr>
 
         }
