--- a/Palestra/Palestra/Views/Sala/Cadastrar.cshtml
+++ b/Palestra/Palestra/Views/Sala/Cadastrar.cshtml
@@ -1,4 +1,4 @@
-﻿@model Palestra.Models.Sala
+﻿@model Palestra.ViewModel.SalaViewModel
     <div class="panel panel-default">
         <div class="panel-heading">Cadastrar Sala</div>
 @Html.ValidationSummary(true)
