--- a/Palestra/Palestra/Views/Trilha/Cadastrar.cshtml
+++ b/Palestra/Palestra/Views/Trilha/Cadastrar.cshtml
@@ -1,4 +1,4 @@
-﻿@model Palestra.Models.Trilha
+﻿@model Palestra.ViewModel.TrilhaViewModel
 <div class="panel panel-default">
     <div class="panel-heading">Cadastrar Trilha de Palestras</div>
     @Html.ValidationSummary(true)
