--- a/Palestra/Palestra/Views/Sala/Editar.cshtml
+++ b/Palestra/Palestra/Views/Sala/Editar.cshtml
@@ -1,4 +1,4 @@
-﻿@model Palestra.Models.Sala
+﻿@model Palestra.ViewModel.SalaViewModel
 <div class="panel panel-default">
     <div class="panel-heading">Editar Sala</div>
     @Html.ValidationSummary(true)
