--- a/Palestra/Palestra/Views/Shared/Logger.cshtml
+++ b/Palestra/Palestra/Views/Shared/Logger.cshtml
@@ -1,6 +1,5 @@
-﻿@helper FlashMessage(System.Web.Mvc.TempDataDictionary tempData)
-{
-    var flash = tempData.Where(item => item.Key.StartsWith("alert-"))
+﻿@{
+    var flash = TempData.Where(item => item.Key.StartsWith("alert-"))
         .Select(item => new { Message = item.Value, ClassName = item.Key }).FirstOrDefault();
 
     if (flash != null)
@@ -8,7 +7,7 @@
         <script type="text/javascript">
         $(function () {
             var $flash = $('<div id="flash" class="alert  fade in" style="display:none;">');
-            $flash.html('<button data-dismiss="alert" class="close close-sm" type="button"><i class="fa fa-times"></i></button>' + '@flash.Message');
+            $flash.html('<button data-dismiss="alert" class="close close-sm" type="button"><i class="glyphicon glyphicon-remove"></i></button>' + '@flash.Message');
             $flash.toggleClass('flash');
             $flash.toggleClass('@flash.ClassName');
             $('#msg').prepend($flash);
