--- a/Palestra/Palestra/Views/Shared/_Layout.cshtml
+++ b/Palestra/Palestra/Views/Shared/_Layout.cshtml
@@ -24,26 +24,23 @@
                     @if (User.Identity.IsAuthenticated)
                     {
                         <ul class="nav navbar-nav">
-                            @if (User.IsInRole("palestra_vizualizar") || User.IsInRole("Admin"))
+                            @if (User.IsInRole("palestra_ver") || User.IsInRole("Admin"))
                             {
                                 <li><a href="@Url.Action("Index","Palest")">Palestras</a></li>
                             }
-                            @if (User.IsInRole("palestrante_vizualizar") || User.IsInRole("Admin"))
+                            @if (User.IsInRole("palestrante_ver") || User.IsInRole("Admin"))
                             {
                                 <li><a href="@Url.Action("Index","Palestrante")">Palestrantes</a></li> }
 
-                            @if (User.IsInRole("sala_vizualizar") || User.IsInRole("Admin"))
+                            @if (User.IsInRole("sala_ver") || User.IsInRole("Admin"))
                             {
                                 <li><a href="@Url.Action("Index","Sala")">Salas</a></li>
                             }
-                            @if (User.IsInRole("trilha_vizualizar") || User.IsInRole("Admin"))
+                            @if (User.IsInRole("trilha_ver") || User.IsInRole("Admin"))
                             {
                                 <li><a href="@Url.Action("Index","Trilha")">Trilha</a></li>
                             }
-                            @if (User.IsInRole("Admin"))
-                            {
-                                <li><a href="@Url.Action("Index","Usuario")">Usuarios</a></li>
-                            }
+                            
 
                         </ul>
                         <form class="navbar-form navbar-left" role="search">
@@ -55,8 +52,14 @@
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">@User.Identity.Name <span class="caret"></span></a>
                                 <ul class="dropdown-menu" role="menu">
+                                   
                                     <li><a href="@Url.Action("Index", "Acesso")">Minha Conta</a></li>
                                     <li><a href="@Url.Action("SingOut","Acesso")">Sair</a></li>
+                                    <div class="divider"></div>
+                                    @if (User.IsInRole("Admin"))
+                                    {
+                                        <li><a href="@Url.Action("Index","Usuario")">Usuarios</a></li>
+                                    }
                                 </ul>
                             </li>
                         </ul>
@@ -74,7 +77,7 @@
             </div>
         </nav>
         <div class="col-md-12">
-            @Logger.FlashMessage(TempData)
+            @Html.Partial("Logger")
         </div>
 
         @RenderBody()
